# mssql_mcp_server

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  run_tests.py
.github/workflows/: test.yml
src/mssql_mcp_server/: server.py
tests/: test_azure_sql_security.py  test_server.py  test_sql_security.py
