[project]
name = "mssql_mcp_server"
version = "0.1.1"
description = "A Model Context Protocol (MCP) server facilitating secure interactions with MSSQL databases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "JexinSam" }
]
maintainers = [
    { name = "Eric Salmon", email = "eric.allen.salmon@gmail.com" }
]
keywords = ["mssql", "mcp", "database", "sql", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pyodbc>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ericallensalmon/mssql_mcp_server"
Repository = "https://github.com/ericallensalmon/mssql_mcp_server.git"
"Bug Tracker" = "https://github.com/ericallensalmon/mssql_mcp_server/issues"
"Original Repository" = "https://github.com/JexinSam/mssql_mcp_server"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=mssql_mcp_server"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true 